refactor(leetcode): expand Binary Tree Level Order Traversal tests
- Replace parameterized tests with descriptive individual test methods for progressive TDD
- Add ASCII tree diagrams to all test cases
- Add test cases for right-skewed, complete binary tree, and asymmetric depth
- Replace LinkedList with ArrayDeque and simplify loop in implementation